2026-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	Propagate "configure" shell variable `urwfontsupport` into
	"BuildFoundries" script, quieting build-time warnings when URW
	font support is explicitly deconfigured.

	* m4/groff.m4 (GROFF_URW_FONTS_SUPPORT): `AC_SUBST`
	`urwfontsupport` so that it is defined in Makefiles.
	* font/devpdf/devpdf.am (BuildFoundries): Add `urwfontsupport`
	to set of sed(1) substitutions performed when generating target.
	* font/devpdf/util/BuildFoundries.pl: Add `urwfontsupport`
	scalar, taking value of corresponding sed substituion.
	(LoadFoundry): Suppress warning about unavailable font if
	`urwfontsupport` matches "no".

2026-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_URW_FONTS_CHECK): Stop emptying shell
	variable `urwfontsdir` if the URW fonts aren't found.  This
	variable _had_ been used both to store the directory where they
	were found _and_ as an indicator of whether URW font support was
	expected by the configuring user.  We now have `urwfontsupport`
	for the latter purpose, and blanking out `urwfontsdir` had the
	undesirable side effect of suppressing the message that the
	`GROFF_URW_FONTS_NOTICE` macro emits, preventing notification of
	the user that their intention to configure URW font support was
	foiled.

2026-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Identify the report at the end of the
	configuration process as the "configuration summary"; I've been
	using this term for years when collecting information from users
	reporting bugs.

2026-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* gnulib: Refresh stable/2026-01 branch to obtain commit
	dc9ad4ec31, which should fix a build error in C++ code on
	FreeBSD 15.  Thanks to Bruno Haible.

2026-01-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/groff.texi.in: Adapt manual content to the configured
	groff command prefix.  If the build is configured without a